# Geotwin

./: .dockerignore  .eslintrc.json  .gitignore  .venv  API.md  ARCHITECTURE.md  BANNER.md  CAMERA_FIX_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  FILE_TREE.md  GEOTWIN_COMPREHENSIVE_REPORT.md  GEOTWIN_SUMMARY.md  Geotwin nuevas funcionalidades.md  Geotwin.code-workspace.odt  HANDOFF_BUGS_060426.md  HANDOFF_PROMPT.md  HYPERREAL_HANDOFF.md  LICENSE  PROJECT.md  QUICKSTART.md  README.md  SECURITY.md  SETUP_COMPLETE.md  TESTING_REPORT.md  TIMEOUT_TESTING.md  chat con gemini.md  copernicus  dev.sh  digital twin para Datacenters.odt  docker-compose.yml  hyperreal-local.sh  node_modules  package.json  pnpm-lock.yaml  prompt fix 31-03.md  prompt maestro one click.md  prompt para copilotr.md  pyproject.toml  (+3 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: engine-expert.agent.md
.github/prompts/: fix-cesium-capture.prompt.md  fix-tile-pipeline.prompt.md  geotwin-deploy.prompt.md
.github/workflows/: ci.yml  deploy.yml
apps/api/: .env.example  Dockerfile  package.json  sample-data  tsconfig.json
apps/illustration-service/: .env.example  Dockerfile  README.md  USAGE.md  diagnose.py  main.py  requirements.txt  setup.sh  test_img2img.py  (+2 more)
db/: init.sql
engine/: Dockerfile  __init__.py  __main__.py  api.py  config.py  pipeline.py
scripts/: cleanup_gpu.sh  create-sample-zip.sh  generate_standalone_glb.py  memguard  memory_guardian.py  test_building_wfs.py
tools/: dev-up.sh
(+183 files in other folders)
