[project]
name = "geotwin-engine"
version = "0.1.0"
description = "GeoTwin BIM Territorial — Processing engine for terrain mesh, NDVI, and 3D Tiles"
requires-python = ">=3.11"
dependencies = [
    "rasterio>=1.3",
    "fiona>=1.9",
    "shapely>=2.0",
    "pyproj>=3.6",
    "numpy>=1.26",
    "scipy>=1.12",
    "trimesh>=4.0",
    "open3d>=0.18",
    "py3dtiles>=7.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "lxml>=5.0",
    "httpx>=0.27",
    "Pillow>=10.0",
    "pytest>=8.0",
    "DracoPy>=1.3",
]

[project.optional-dependencies]
worker = [
    "celery>=5.3",
    "redis>=5.0",
]
storage = [
    "boto3>=1.34",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["engine/tests"]
